<resources>
    <string name="app_name">AndroidChatApp</string>
    <string name="login_EmailHint">이메일</string>
    <string name="login_PasswordHint">비밀번호</string>
    <string name="login_loginbutton">로그인</string>
    <string name="login_SignUp">회원가입</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_password_confirm">비밀번호 확인</string>
    <string name="signup_password">비밀번호</string>
    <string name="signup_email">이메일</string>
    <string name="signup_id">사번</string>
    <string name="signup_ok">회원가입</string>
    <string name="signup_cancel">취소</string>
    <string name="login_Frgament_lable">로그인</string>
    <string name="signup_Fragment_lable">회원가입</string>
    <string name="profile_chat">대화</string>
    <string name="profile_email">이메일</string>
    <string name="profile_record">영상통화</string>
    <string name="signup_name">이름</string>
    <string name="users">users</string>
    <string name="colleague_list">동료 목록</string>
    <string name="my_profile">내 프로필</string>
    <string name="Chat_notification_channel_id">0</string>
    <string name="Chat_notification_channel_name">ChatApp</string>
    <string name="Chat_notification_channel_description">Chat reminder</string>
    <string name="message_subscribed">Subscribed to topic</string>
    <string name="message_subscribe_failed">Failed to subscribe to topic</string>
</resources>