<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginEmailText"
        android:layout_width="@dimen/loginFragment_textInput_width"
        android:layout_height="60dp"
        android:hint="@string/login_EmailHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordText"
        android:layout_width="@dimen/loginFragment_textInput_width"
        android:layout_height="60dp"
        android:hint="@string/login_PasswordHint"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="@+id/loginEmailText"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailText"
        android:layout_marginTop="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="@dimen/loginFragment_textInput_width"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/loginPasswordText"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordText"
        android:text="@string/login_loginbutton"
        android:layout_marginTop="60dp"/>

    <Button
        android:id="@+id/loginSignUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/login_SignUp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
