<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="signUpFragment"
            type="com.example.androidchatapp.fragment.SignUpFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".fragment.SignUpFragment">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signupEmail"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/signup_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupEmailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signupName"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:hint="@string/signup_name"
                app:layout_constraintEnd_toEndOf="@id/signupEmail"
                app:layout_constraintStart_toStartOf="@id/signupEmail"
                app:layout_constraintTop_toBottomOf="@+id/signupEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signupPassword"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:hint="@string/signup_password"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="@+id/signupName"
                app:layout_constraintStart_toStartOf="@id/signupName"
                app:layout_constraintTop_toBottomOf="@+id/signupName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupPasswordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signupPasswordConfirm"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:hint="@string/signup_password_confirm"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="@id/signupPassword"
                app:layout_constraintStart_toStartOf="@+id/signupPassword"
                app:layout_constraintTop_toBottomOf="@+id/signupPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signupEmployeeNumber"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:hint="@string/signup_id"
                app:layout_constraintEnd_toEndOf="@+id/signupPasswordConfirm"
                app:layout_constraintStart_toStartOf="@+id/signupPasswordConfirm"
                app:layout_constraintTop_toBottomOf="@+id/signupPasswordConfirm">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupEmployeeNumberText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signupButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:onClick="@{() -> signUpFragment.signUp()}"
                android:text="@string/signup_ok"
                app:layout_constraintStart_toStartOf="@+id/signupEmployeeNumber"
                app:layout_constraintTop_toBottomOf="@+id/signupEmployeeNumber"
                app:layout_constraintWidth_percent="0.43" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:onClick="@{() -> signUpFragment.cancel()}"
                android:text="@string/signup_cancel"
                app:layout_constraintEnd_toEndOf="@+id/signupEmployeeNumber"
                app:layout_constraintTop_toBottomOf="@+id/signupEmployeeNumber"
                app:layout_constraintWidth_percent="0.43" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
